# hdsx

./: .env.example  .gitignore  AGENTS.md  PROJECT_STATUS.md  README.md  plugins.md  pyproject.toml  start_backend.ps1  start_frontend.ps1  start_production.ps1
backend/: alembic.ini
backend/app/: __init__.py  main.py
backend/migrations/: env.py
backend/tests/: test_agent_capabilities.py  test_assignment_contracts.py  test_course_learning_analysis.py  test_document_preview.py  test_fusion.py  test_health.py  test_model_providers.py  test_model_warmup.py  test_plugins.py  test_rag_pipeline.py  test_security.py  test_splitter.py  test_structured_outputs.py  test_web_crawler.py  test_web_supplement.py
database/: init_mysql.sql
docs/: 01-软件需求规约.md  02-项目开发计划.md  03-数据库设计说明书.md  04-系统架构设计说明书.md  05-测试用例.md  06-用户使用手册.md
evals/: demo_course.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  assignment-enhancements.css  capabilities.css  chat-enhancements.css  enhancements.css  knowledge-layout.css  layout-fixes.css  lesson.css  main.ts  model-settings.css  navigation.css  style.css  web-actions.css  web-import.css
p/: __init__.py
p/course_web_crawler/: __init__.py  crawler.py
plugins/: __init__.py
plugins/example_hello/: plugin.json  plugin.py
plugins/model_providers/: README.md  __init__.py  contracts.py  providers.py  store.py
plugins/spider/: README.md  __init__.py
scripts/: check_environment.py  e2e_smoke.py  seed_demo.py  verify_account_course_flow.py  verify_product_features.py
(+141 files in other folders)
