[project]
name = "ai-education-agent"
version = "0.1.0"
description = "AI智能备课与个性化学习辅导智能体"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pymysql>=1.1",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "cryptography>=42.0",
  "pymilvus>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
